# podbx

./: .gitignore  Containerfile  README.md  install.sh  podbx-gui  pyproject.toml  uninstall.sh
data/help/C/: ide-integration.page  index.page  workspaces.page
podbx/: __init__.py  config.py  workspace.py
podbx/ide/: __init__.py  core.py  vscode.py
podbx/ui/: __init__.py  app.py  dialogs.py  window.py
