[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podbx"
version = "1.0.0"
description = "Workspace manager for immutable Linux systems, powered by Distrobox"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "FlucidOS Project" }
]
keywords = ["distrobox", "podman", "immutable", "linux", "workspace", "gtk4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.11"

# PyGObject is a system package; not listed here so pip doesn't try to
# build it from source. Install it via your distro: python3-gi, gir1.2-gtk-4.0
dependencies = []

[project.scripts]
podbx-gui = "podbx.ui.app:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["podbx*"]

[tool.setuptools.package-data]
podbx = ["data/**/*"]
